# sixpath

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  sqlite.sql  streamlit_app.py  streamlit_helpers.py
.streamlit/: secrets.toml.example
api/: api_client.py
dao/: connection.py  connectionDAO.py  referralDAO.py  userDAO.py
database/: sqlite.sql
documentation/: FULLSTACK_SETUP.md  README_STREAMLIT.md
frontend/: README-streamlit.md  app.py  mock_data.py  styling.py  utils.py
frontend/api/: api_call.py  api_models.py  service_locator.py
frontend/pages/: 01_Login.py  02_Dashboard.py  03_Referrals.py  04_Edit_Profile.py  05_Edit_Connection.py  06_Contacts.py
frontend/services/: auth_service.py
models/: database_models.py  input_models.py  response_models.py
pages/: 01_Login.py  02_Dashboard.py  03_Referrals.py  04_Edit_Profile.py  05_Edit_Connection.py  06_Manage_Users.py
routers/: auth.py  connections.py  referrals.py  users.py
scripts/: import_mock_data.py
services/: connectionService.py  referralService.py  userService.py
streamlit_pages/: edit.py  login.py  network.py  profile.py
utils/: config.py  dependencies.py  oath2.py
